parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    CONST
    TRUE
    DOT
    STRING
    MAIN
    FALSE

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAMA ID SEMICOLON prs1 prs2 block
Rule 2     prs1 -> vars
Rule 3     prs1 -> empty
Rule 4     prs2 -> function prs2
Rule 5     prs2 -> empty
Rule 6     vars -> VAR vas1 COLON type SEMICOLON vas1
Rule 7     vas1 -> ID
Rule 8     vas1 -> ID COMA vas1
Rule 9     vas1 -> empty
Rule 10    type -> INT_TYPE
Rule 11    type -> FLOAT_TYPE
Rule 12    type -> BOOL_TYPE
Rule 13    type -> STRING_TYPE
Rule 14    type -> array
Rule 15    array -> INT_TYPE ars1
Rule 16    array -> FLOAT_TYPE ars1
Rule 17    array -> STRING_TYPE ars1
Rule 18    ars1 -> LARRAY CTEI RARRAY
Rule 19    block -> LBRACKET bls1 RBRACKET
Rule 20    bls1 -> statue bls1
Rule 21    bls1 -> empty
Rule 22    statue -> assignment
Rule 23    statue -> condition
Rule 24    statue -> read
Rule 25    statue -> write
Rule 26    statue -> cycle
Rule 27    statue -> functioncall
Rule 28    statue -> predefined
Rule 29    statue -> return
Rule 30    parameter -> empty
Rule 31    parameter -> pas1
Rule 32    pas1 -> type ID
Rule 33    pas1 -> type ID COMA pas1
Rule 34    return -> RETURN ssexpression SEMICOLON
Rule 35    assignment -> ID ass1 ASSIGN ass2
Rule 36    ass1 -> empty
Rule 37    ass1 -> LARRAY ssexpression RARRAY
Rule 38    ass2 -> functioncall
Rule 39    ass2 -> ssexpression
Rule 40    ssexpression -> sexpression
Rule 41    ssexpression -> NOT sexpression
Rule 42    sexpression -> expression ses1
Rule 43    ses1 -> empty
Rule 44    ses1 -> AND sexpression
Rule 45    ses1 -> OR sexpression
Rule 46    expression -> exp exs1
Rule 47    exs1 -> empty
Rule 48    exs1 -> GT exp
Rule 49    exs1 -> LT exp
Rule 50    exs1 -> GE exp
Rule 51    exs1 -> LE exp
Rule 52    exs1 -> EQUAL exp
Rule 53    exs1 -> DIFFERENT exp
Rule 54    term -> factor tes1
Rule 55    tes1 -> empty
Rule 56    tes1 -> TIMES term
Rule 57    tes1 -> DIVISION term
Rule 58    exp -> term exps1
Rule 59    exps1 -> empty
Rule 60    exps1 -> PLUS term
Rule 61    exps1 -> MINUS term
Rule 62    predefined -> drawcircle
Rule 63    predefined -> drawsquare
Rule 64    predefined -> drawtriangle
Rule 65    predefined -> drawline
Rule 66    predefined -> drawpolygon
Rule 67    predefined -> drawcurve
Rule 68    condition -> IF cos1 RPAREN block cos3
Rule 69    cos1 -> LPAREN cos2
Rule 70    cos1 -> NOT cos2
Rule 71    cos2 -> ssexpression
Rule 72    cos2 -> functioncall
Rule 73    cos3 -> empty
Rule 74    cos3 -> ELSE block
Rule 75    cos3 -> ELSEIF cos1
Rule 76    read -> ID ASSIGN INPUT SEMICOLON
Rule 77    write -> PRINT LPAREN ssexpression RPAREN
Rule 78    color -> RED
Rule 79    color -> GREEN
Rule 80    color -> BLUE
Rule 81    color -> YELLOW
Rule 82    color -> BROWN
Rule 83    color -> BLACK
Rule 84    cycle -> WHILE LPAREN ssexpression RPAREN block
Rule 85    function -> FUNC fus1 ID LPAREN parameter RPAREN block
Rule 86    fus1 -> VOID
Rule 87    fus1 -> type
Rule 88    functioncall -> ID LPAREN fcs1 RPAREN SEMICOLON
Rule 89    fcs1 -> empty
Rule 90    fcs1 -> ssexpression
Rule 91    fcs1 -> ssexpression COMA fcs1
Rule 92    drawline -> DRAWLINE LPAREN ssexpression COMA ssexpression COMA ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
Rule 93    drawsquare -> DRAWSQUARE LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
Rule 94    drawcircle -> DRAWCIRCLE LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
Rule 95    drawtriangle -> DRAWTRIANGLE LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
Rule 96    drawcurve -> DRAWCURVE LPAREN ssexpression COMA color RPAREN SEMICOLON
Rule 97    drawpolygon -> DRAWPOLYGON LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
Rule 98    factor -> LPAREN ssexpression RPAREN
Rule 99    factor -> PLUS fas1
Rule 100   factor -> MINUS fas1
Rule 101   fas1 -> ID fas2
Rule 102   fas1 -> CTEI
Rule 103   fas1 -> CTEF
Rule 104   fas2 -> LARRAY exp RARRAY
Rule 105   fas2 -> LPAREN exp RPAREN
Rule 106   fas2 -> empty
Rule 107   empty -> <empty>

Terminals, with rules where they appear

AND                  : 44
ASSIGN               : 35 76
BLACK                : 83
BLUE                 : 80
BOOL_TYPE            : 12
BROWN                : 82
COLON                : 6
COMA                 : 8 33 91 92 92 92 92 93 93 94 94 95 95 96 97 97
CONST                : 
CTEF                 : 103
CTEI                 : 18 102
DIFFERENT            : 53
DIVISION             : 57
DOT                  : 
DRAWCIRCLE           : 94
DRAWCURVE            : 96
DRAWLINE             : 92
DRAWPOLYGON          : 97
DRAWSQUARE           : 93
DRAWTRIANGLE         : 95
ELSE                 : 74
ELSEIF               : 75
EQUAL                : 52
FALSE                : 
FLOAT_TYPE           : 11 16
FUNC                 : 85
GE                   : 50
GREEN                : 79
GT                   : 48
ID                   : 1 7 8 32 33 35 76 85 88 101
IF                   : 68
INPUT                : 76
INT_TYPE             : 10 15
LARRAY               : 18 37 104
LBRACKET             : 19
LE                   : 51
LPAREN               : 69 77 84 85 88 92 93 94 95 96 97 98 105
LT                   : 49
MAIN                 : 
MINUS                : 61 100
NOT                  : 41 70
OR                   : 45
PLUS                 : 60 99
PRINT                : 77
PROGRAMA             : 1
RARRAY               : 18 37 104
RBRACKET             : 19
RED                  : 78
RETURN               : 34
RPAREN               : 68 77 84 85 88 92 93 94 95 96 97 98 105
SEMICOLON            : 1 6 34 76 88 92 93 94 95 96 97
STRING               : 
STRING_TYPE          : 13 17
TIMES                : 56
TRUE                 : 
VAR                  : 6
VOID                 : 86
WHILE                : 84
YELLOW               : 81
error                : 

Nonterminals, with rules where they appear

array                : 14
ars1                 : 15 16 17
ass1                 : 35
ass2                 : 35
assignment           : 22
block                : 1 68 74 84 85
bls1                 : 19 20
color                : 92 93 94 95 96 97
condition            : 23
cos1                 : 68 75
cos2                 : 69 70
cos3                 : 68
cycle                : 26
drawcircle           : 62
drawcurve            : 67
drawline             : 65
drawpolygon          : 66
drawsquare           : 63
drawtriangle         : 64
empty                : 3 5 9 21 30 36 43 47 55 59 73 89 106
exp                  : 46 48 49 50 51 52 53 104 105
expression           : 42
exps1                : 58
exs1                 : 46
factor               : 54
fas1                 : 99 100
fas2                 : 101
fcs1                 : 88 91
function             : 4
functioncall         : 27 38 72
fus1                 : 85
parameter            : 85
pas1                 : 31 33
predefined           : 28
program              : 0
prs1                 : 1
prs2                 : 1 4
read                 : 24
return               : 29
ses1                 : 42
sexpression          : 40 41 44 45
ssexpression         : 34 37 39 71 77 84 90 91 92 92 92 92 93 93 94 94 95 95 96 97 97 98
statue               : 20
term                 : 56 57 58 60 61
tes1                 : 54
type                 : 6 32 33 87
vars                 : 2
vas1                 : 6 6 8
write                : 25

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAMA ID SEMICOLON prs1 prs2 block

    PROGRAMA        shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAMA . ID SEMICOLON prs1 prs2 block

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAMA ID . SEMICOLON prs1 prs2 block

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAMA ID SEMICOLON . prs1 prs2 block
    (2) prs1 -> . vars
    (3) prs1 -> . empty
    (6) vars -> . VAR vas1 COLON type SEMICOLON vas1
    (107) empty -> .

    VAR             shift and go to state 8
    FUNC            reduce using rule 107 (empty -> .)
    LBRACKET        reduce using rule 107 (empty -> .)

    vars                           shift and go to state 5
    prs1                           shift and go to state 6
    empty                          shift and go to state 7

state 5

    (2) prs1 -> vars .

    FUNC            reduce using rule 2 (prs1 -> vars .)
    LBRACKET        reduce using rule 2 (prs1 -> vars .)


state 6

    (1) program -> PROGRAMA ID SEMICOLON prs1 . prs2 block
    (4) prs2 -> . function prs2
    (5) prs2 -> . empty
    (85) function -> . FUNC fus1 ID LPAREN parameter RPAREN block
    (107) empty -> .

    FUNC            shift and go to state 12
    LBRACKET        reduce using rule 107 (empty -> .)

    function                       shift and go to state 9
    prs2                           shift and go to state 10
    empty                          shift and go to state 11

state 7

    (3) prs1 -> empty .

    FUNC            reduce using rule 3 (prs1 -> empty .)
    LBRACKET        reduce using rule 3 (prs1 -> empty .)


state 8

    (6) vars -> VAR . vas1 COLON type SEMICOLON vas1
    (7) vas1 -> . ID
    (8) vas1 -> . ID COMA vas1
    (9) vas1 -> . empty
    (107) empty -> .

    ID              shift and go to state 14
    COLON           reduce using rule 107 (empty -> .)

    vas1                           shift and go to state 13
    empty                          shift and go to state 15

state 9

    (4) prs2 -> function . prs2
    (4) prs2 -> . function prs2
    (5) prs2 -> . empty
    (85) function -> . FUNC fus1 ID LPAREN parameter RPAREN block
    (107) empty -> .

    FUNC            shift and go to state 12
    LBRACKET        reduce using rule 107 (empty -> .)

    function                       shift and go to state 9
    prs2                           shift and go to state 16
    empty                          shift and go to state 11

state 10

    (1) program -> PROGRAMA ID SEMICOLON prs1 prs2 . block
    (19) block -> . LBRACKET bls1 RBRACKET

    LBRACKET        shift and go to state 17

    block                          shift and go to state 18

state 11

    (5) prs2 -> empty .

    LBRACKET        reduce using rule 5 (prs2 -> empty .)


state 12

    (85) function -> FUNC . fus1 ID LPAREN parameter RPAREN block
    (86) fus1 -> . VOID
    (87) fus1 -> . type
    (10) type -> . INT_TYPE
    (11) type -> . FLOAT_TYPE
    (12) type -> . BOOL_TYPE
    (13) type -> . STRING_TYPE
    (14) type -> . array
    (15) array -> . INT_TYPE ars1
    (16) array -> . FLOAT_TYPE ars1
    (17) array -> . STRING_TYPE ars1

    VOID            shift and go to state 21
    INT_TYPE        shift and go to state 25
    FLOAT_TYPE      shift and go to state 22
    BOOL_TYPE       shift and go to state 24
    STRING_TYPE     shift and go to state 23

    fus1                           shift and go to state 19
    array                          shift and go to state 26
    type                           shift and go to state 20

state 13

    (6) vars -> VAR vas1 . COLON type SEMICOLON vas1

    COLON           shift and go to state 27


state 14

    (7) vas1 -> ID .
    (8) vas1 -> ID . COMA vas1

    COLON           reduce using rule 7 (vas1 -> ID .)
    FUNC            reduce using rule 7 (vas1 -> ID .)
    LBRACKET        reduce using rule 7 (vas1 -> ID .)
    COMA            shift and go to state 28


state 15

    (9) vas1 -> empty .

    COLON           reduce using rule 9 (vas1 -> empty .)
    FUNC            reduce using rule 9 (vas1 -> empty .)
    LBRACKET        reduce using rule 9 (vas1 -> empty .)


state 16

    (4) prs2 -> function prs2 .

    LBRACKET        reduce using rule 4 (prs2 -> function prs2 .)


state 17

    (19) block -> LBRACKET . bls1 RBRACKET
    (20) bls1 -> . statue bls1
    (21) bls1 -> . empty
    (22) statue -> . assignment
    (23) statue -> . condition
    (24) statue -> . read
    (25) statue -> . write
    (26) statue -> . cycle
    (27) statue -> . functioncall
    (28) statue -> . predefined
    (29) statue -> . return
    (107) empty -> .
    (35) assignment -> . ID ass1 ASSIGN ass2
    (68) condition -> . IF cos1 RPAREN block cos3
    (76) read -> . ID ASSIGN INPUT SEMICOLON
    (77) write -> . PRINT LPAREN ssexpression RPAREN
    (84) cycle -> . WHILE LPAREN ssexpression RPAREN block
    (88) functioncall -> . ID LPAREN fcs1 RPAREN SEMICOLON
    (62) predefined -> . drawcircle
    (63) predefined -> . drawsquare
    (64) predefined -> . drawtriangle
    (65) predefined -> . drawline
    (66) predefined -> . drawpolygon
    (67) predefined -> . drawcurve
    (34) return -> . RETURN ssexpression SEMICOLON
    (94) drawcircle -> . DRAWCIRCLE LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
    (93) drawsquare -> . DRAWSQUARE LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
    (95) drawtriangle -> . DRAWTRIANGLE LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
    (92) drawline -> . DRAWLINE LPAREN ssexpression COMA ssexpression COMA ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
    (97) drawpolygon -> . DRAWPOLYGON LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
    (96) drawcurve -> . DRAWCURVE LPAREN ssexpression COMA color RPAREN SEMICOLON

    RBRACKET        reduce using rule 107 (empty -> .)
    ID              shift and go to state 49
    IF              shift and go to state 51
    PRINT           shift and go to state 35
    WHILE           shift and go to state 34
    RETURN          shift and go to state 30
    DRAWCIRCLE      shift and go to state 37
    DRAWSQUARE      shift and go to state 40
    DRAWTRIANGLE    shift and go to state 32
    DRAWLINE        shift and go to state 48
    DRAWPOLYGON     shift and go to state 52
    DRAWCURVE       shift and go to state 53

    drawtriangle                   shift and go to state 29
    statue                         shift and go to state 31
    drawcurve                      shift and go to state 33
    predefined                     shift and go to state 36
    drawline                       shift and go to state 38
    write                          shift and go to state 39
    functioncall                   shift and go to state 56
    empty                          shift and go to state 43
    return                         shift and go to state 44
    drawpolygon                    shift and go to state 45
    read                           shift and go to state 46
    assignment                     shift and go to state 47
    condition                      shift and go to state 50
    cycle                          shift and go to state 42
    drawsquare                     shift and go to state 54
    bls1                           shift and go to state 55
    drawcircle                     shift and go to state 41

state 18

    (1) program -> PROGRAMA ID SEMICOLON prs1 prs2 block .

    $end            reduce using rule 1 (program -> PROGRAMA ID SEMICOLON prs1 prs2 block .)


state 19

    (85) function -> FUNC fus1 . ID LPAREN parameter RPAREN block

    ID              shift and go to state 57


state 20

    (87) fus1 -> type .

    ID              reduce using rule 87 (fus1 -> type .)


state 21

    (86) fus1 -> VOID .

    ID              reduce using rule 86 (fus1 -> VOID .)


state 22

    (11) type -> FLOAT_TYPE .
    (16) array -> FLOAT_TYPE . ars1
    (18) ars1 -> . LARRAY CTEI RARRAY

    ID              reduce using rule 11 (type -> FLOAT_TYPE .)
    SEMICOLON       reduce using rule 11 (type -> FLOAT_TYPE .)
    LARRAY          shift and go to state 58

    ars1                           shift and go to state 59

state 23

    (13) type -> STRING_TYPE .
    (17) array -> STRING_TYPE . ars1
    (18) ars1 -> . LARRAY CTEI RARRAY

    ID              reduce using rule 13 (type -> STRING_TYPE .)
    SEMICOLON       reduce using rule 13 (type -> STRING_TYPE .)
    LARRAY          shift and go to state 58

    ars1                           shift and go to state 60

state 24

    (12) type -> BOOL_TYPE .

    ID              reduce using rule 12 (type -> BOOL_TYPE .)
    SEMICOLON       reduce using rule 12 (type -> BOOL_TYPE .)


state 25

    (10) type -> INT_TYPE .
    (15) array -> INT_TYPE . ars1
    (18) ars1 -> . LARRAY CTEI RARRAY

    ID              reduce using rule 10 (type -> INT_TYPE .)
    SEMICOLON       reduce using rule 10 (type -> INT_TYPE .)
    LARRAY          shift and go to state 58

    ars1                           shift and go to state 61

state 26

    (14) type -> array .

    ID              reduce using rule 14 (type -> array .)
    SEMICOLON       reduce using rule 14 (type -> array .)


state 27

    (6) vars -> VAR vas1 COLON . type SEMICOLON vas1
    (10) type -> . INT_TYPE
    (11) type -> . FLOAT_TYPE
    (12) type -> . BOOL_TYPE
    (13) type -> . STRING_TYPE
    (14) type -> . array
    (15) array -> . INT_TYPE ars1
    (16) array -> . FLOAT_TYPE ars1
    (17) array -> . STRING_TYPE ars1

    INT_TYPE        shift and go to state 25
    FLOAT_TYPE      shift and go to state 22
    BOOL_TYPE       shift and go to state 24
    STRING_TYPE     shift and go to state 23

    array                          shift and go to state 26
    type                           shift and go to state 62

state 28

    (8) vas1 -> ID COMA . vas1
    (7) vas1 -> . ID
    (8) vas1 -> . ID COMA vas1
    (9) vas1 -> . empty
    (107) empty -> .

    ID              shift and go to state 14
    COLON           reduce using rule 107 (empty -> .)
    FUNC            reduce using rule 107 (empty -> .)
    LBRACKET        reduce using rule 107 (empty -> .)

    vas1                           shift and go to state 63
    empty                          shift and go to state 15

state 29

    (64) predefined -> drawtriangle .

    ID              reduce using rule 64 (predefined -> drawtriangle .)
    IF              reduce using rule 64 (predefined -> drawtriangle .)
    PRINT           reduce using rule 64 (predefined -> drawtriangle .)
    WHILE           reduce using rule 64 (predefined -> drawtriangle .)
    RETURN          reduce using rule 64 (predefined -> drawtriangle .)
    DRAWCIRCLE      reduce using rule 64 (predefined -> drawtriangle .)
    DRAWSQUARE      reduce using rule 64 (predefined -> drawtriangle .)
    DRAWTRIANGLE    reduce using rule 64 (predefined -> drawtriangle .)
    DRAWLINE        reduce using rule 64 (predefined -> drawtriangle .)
    DRAWPOLYGON     reduce using rule 64 (predefined -> drawtriangle .)
    DRAWCURVE       reduce using rule 64 (predefined -> drawtriangle .)
    RBRACKET        reduce using rule 64 (predefined -> drawtriangle .)


state 30

    (34) return -> RETURN . ssexpression SEMICOLON
    (40) ssexpression -> . sexpression
    (41) ssexpression -> . NOT sexpression
    (42) sexpression -> . expression ses1
    (46) expression -> . exp exs1
    (58) exp -> . term exps1
    (54) term -> . factor tes1
    (98) factor -> . LPAREN ssexpression RPAREN
    (99) factor -> . PLUS fas1
    (100) factor -> . MINUS fas1

    NOT             shift and go to state 69
    LPAREN          shift and go to state 65
    PLUS            shift and go to state 70
    MINUS           shift and go to state 68

    term                           shift and go to state 64
    factor                         shift and go to state 66
    sexpression                    shift and go to state 67
    exp                            shift and go to state 71
    ssexpression                   shift and go to state 72
    expression                     shift and go to state 73

state 31

    (20) bls1 -> statue . bls1
    (20) bls1 -> . statue bls1
    (21) bls1 -> . empty
    (22) statue -> . assignment
    (23) statue -> . condition
    (24) statue -> . read
    (25) statue -> . write
    (26) statue -> . cycle
    (27) statue -> . functioncall
    (28) statue -> . predefined
    (29) statue -> . return
    (107) empty -> .
    (35) assignment -> . ID ass1 ASSIGN ass2
    (68) condition -> . IF cos1 RPAREN block cos3
    (76) read -> . ID ASSIGN INPUT SEMICOLON
    (77) write -> . PRINT LPAREN ssexpression RPAREN
    (84) cycle -> . WHILE LPAREN ssexpression RPAREN block
    (88) functioncall -> . ID LPAREN fcs1 RPAREN SEMICOLON
    (62) predefined -> . drawcircle
    (63) predefined -> . drawsquare
    (64) predefined -> . drawtriangle
    (65) predefined -> . drawline
    (66) predefined -> . drawpolygon
    (67) predefined -> . drawcurve
    (34) return -> . RETURN ssexpression SEMICOLON
    (94) drawcircle -> . DRAWCIRCLE LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
    (93) drawsquare -> . DRAWSQUARE LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
    (95) drawtriangle -> . DRAWTRIANGLE LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
    (92) drawline -> . DRAWLINE LPAREN ssexpression COMA ssexpression COMA ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
    (97) drawpolygon -> . DRAWPOLYGON LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON
    (96) drawcurve -> . DRAWCURVE LPAREN ssexpression COMA color RPAREN SEMICOLON

    RBRACKET        reduce using rule 107 (empty -> .)
    ID              shift and go to state 49
    IF              shift and go to state 51
    PRINT           shift and go to state 35
    WHILE           shift and go to state 34
    RETURN          shift and go to state 30
    DRAWCIRCLE      shift and go to state 37
    DRAWSQUARE      shift and go to state 40
    DRAWTRIANGLE    shift and go to state 32
    DRAWLINE        shift and go to state 48
    DRAWPOLYGON     shift and go to state 52
    DRAWCURVE       shift and go to state 53

    drawtriangle                   shift and go to state 29
    statue                         shift and go to state 31
    drawcurve                      shift and go to state 33
    predefined                     shift and go to state 36
    drawline                       shift and go to state 38
    write                          shift and go to state 39
    functioncall                   shift and go to state 56
    empty                          shift and go to state 43
    return                         shift and go to state 44
    drawpolygon                    shift and go to state 45
    read                           shift and go to state 46
    assignment                     shift and go to state 47
    condition                      shift and go to state 50
    cycle                          shift and go to state 42
    drawsquare                     shift and go to state 54
    bls1                           shift and go to state 74
    drawcircle                     shift and go to state 41

state 32

    (95) drawtriangle -> DRAWTRIANGLE . LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON

    LPAREN          shift and go to state 75


state 33

    (67) predefined -> drawcurve .

    ID              reduce using rule 67 (predefined -> drawcurve .)
    IF              reduce using rule 67 (predefined -> drawcurve .)
    PRINT           reduce using rule 67 (predefined -> drawcurve .)
    WHILE           reduce using rule 67 (predefined -> drawcurve .)
    RETURN          reduce using rule 67 (predefined -> drawcurve .)
    DRAWCIRCLE      reduce using rule 67 (predefined -> drawcurve .)
    DRAWSQUARE      reduce using rule 67 (predefined -> drawcurve .)
    DRAWTRIANGLE    reduce using rule 67 (predefined -> drawcurve .)
    DRAWLINE        reduce using rule 67 (predefined -> drawcurve .)
    DRAWPOLYGON     reduce using rule 67 (predefined -> drawcurve .)
    DRAWCURVE       reduce using rule 67 (predefined -> drawcurve .)
    RBRACKET        reduce using rule 67 (predefined -> drawcurve .)


state 34

    (84) cycle -> WHILE . LPAREN ssexpression RPAREN block

    LPAREN          shift and go to state 76


state 35

    (77) write -> PRINT . LPAREN ssexpression RPAREN

    LPAREN          shift and go to state 77


state 36

    (28) statue -> predefined .

    ID              reduce using rule 28 (statue -> predefined .)
    IF              reduce using rule 28 (statue -> predefined .)
    PRINT           reduce using rule 28 (statue -> predefined .)
    WHILE           reduce using rule 28 (statue -> predefined .)
    RETURN          reduce using rule 28 (statue -> predefined .)
    DRAWCIRCLE      reduce using rule 28 (statue -> predefined .)
    DRAWSQUARE      reduce using rule 28 (statue -> predefined .)
    DRAWTRIANGLE    reduce using rule 28 (statue -> predefined .)
    DRAWLINE        reduce using rule 28 (statue -> predefined .)
    DRAWPOLYGON     reduce using rule 28 (statue -> predefined .)
    DRAWCURVE       reduce using rule 28 (statue -> predefined .)
    RBRACKET        reduce using rule 28 (statue -> predefined .)


state 37

    (94) drawcircle -> DRAWCIRCLE . LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON

    LPAREN          shift and go to state 78


state 38

    (65) predefined -> drawline .

    ID              reduce using rule 65 (predefined -> drawline .)
    IF              reduce using rule 65 (predefined -> drawline .)
    PRINT           reduce using rule 65 (predefined -> drawline .)
    WHILE           reduce using rule 65 (predefined -> drawline .)
    RETURN          reduce using rule 65 (predefined -> drawline .)
    DRAWCIRCLE      reduce using rule 65 (predefined -> drawline .)
    DRAWSQUARE      reduce using rule 65 (predefined -> drawline .)
    DRAWTRIANGLE    reduce using rule 65 (predefined -> drawline .)
    DRAWLINE        reduce using rule 65 (predefined -> drawline .)
    DRAWPOLYGON     reduce using rule 65 (predefined -> drawline .)
    DRAWCURVE       reduce using rule 65 (predefined -> drawline .)
    RBRACKET        reduce using rule 65 (predefined -> drawline .)


state 39

    (25) statue -> write .

    ID              reduce using rule 25 (statue -> write .)
    IF              reduce using rule 25 (statue -> write .)
    PRINT           reduce using rule 25 (statue -> write .)
    WHILE           reduce using rule 25 (statue -> write .)
    RETURN          reduce using rule 25 (statue -> write .)
    DRAWCIRCLE      reduce using rule 25 (statue -> write .)
    DRAWSQUARE      reduce using rule 25 (statue -> write .)
    DRAWTRIANGLE    reduce using rule 25 (statue -> write .)
    DRAWLINE        reduce using rule 25 (statue -> write .)
    DRAWPOLYGON     reduce using rule 25 (statue -> write .)
    DRAWCURVE       reduce using rule 25 (statue -> write .)
    RBRACKET        reduce using rule 25 (statue -> write .)


state 40

    (93) drawsquare -> DRAWSQUARE . LPAREN ssexpression COMA ssexpression COMA color RPAREN SEMICOLON

    LPAREN          shift and go to state 79


state 41

    (62) predefined -> drawcircle .

    ID              reduce using rule 62 (predefined -> drawcircle .)
    IF              reduce using rule 62 (predefined -> drawcircle .)
    PRINT           reduce using rule 62 (predefined -> drawcircle .)
    WHILE           reduce using rule 62 (predefined -> drawcircle .)
    RETURN          reduce using rule 62 (predefined -> drawcircle .)
    DRAWCIRCLE      reduce using rule 62 (predefined -> drawcircle .)
    DRAWSQUARE      reduce using rule 62 (predefined -> drawcircle .)
    DRAWTRIANGLE    reduce using rule 62 (predefined -> drawcircle .)
    DRAWLINE        reduce using rule 62 (predefined -> drawcircle .)
    DRAWPOLYGON     reduce using rule 62 (predefined -> drawcircle .)
    DRAWCURVE       reduce using rule 62 (predefined -> drawcircle .)
    RBRACKET        reduce using rule 62 (predefined -> drawcircle .)


state 42

    (26) statue -> cycle .

    ID              reduce using rule 26 (statue -> cycle .)
    IF              reduce using rule 26 (statue -> cycle .)
    PRINT           reduce using rule 26 (statue -> cycle .)
    WHILE           reduce using rule 26 (statue -> cycle .)
    RETURN          reduce using rule 26 (statue -> cycle .)
    DRAWCIRCLE      reduce using rule 26 (statue -> cycle .)
    DRAWSQUARE      reduce using rule 26 (statue -> cycle .)
    DRAWTRIANGLE    reduce using rule 26 (statue -> cycle .)
    DRAWLINE        reduce using rule 26 (statue -> cycle .)
    DRAWPOLYGON     reduce using rule 26 (statue -> cycle .)
    DRAWCURVE       reduce using rule 26 (statue -> cycle .)
    RBRACKET        reduce using rule 26 (statue -> cycle .)


state 43

    (21) bls1 -> empty .

    RBRACKET        reduce using rule 21 (bls1 -> empty .)


state 44

    (29) statue -> return .

    ID              reduce using rule 29 (statue -> return .)
    IF              reduce using rule 29 (statue -> return .)
    PRINT           reduce using rule 29 (statue -> return .)
    WHILE           reduce using rule 29 (statue -> return .)
    RETURN          reduce using rule 29 (statue -> return .)
    DRAWCIRCLE      reduce using rule 29 (statue -> return .)
    DRAWSQUARE      reduce using rule 29 (statue -> return .)
    DRAWTRIANGLE    reduce using rule 29 (statue -> return .)
    DRAWLINE        reduce using rule 29 (statue -> return .)
    DRAWPOLYGON     reduce using rule 29 (statue -> return .)
    DRAWCURVE       reduce using rule 29 (statue -> return .)
    RBRACKET        reduce using rule 29 (statue -> return .)


state 45

    (66) predefined -> drawpolygon .

    ID              reduce using rule 66 (predefined -> drawpolygon .)
    IF              reduce using rule 66 (predefined -> drawpolygon .)
    PRINT           reduce using rule 66 (predefined -> drawpolygon .)
    WHILE           reduce using rule 66 (predefined -> drawpolygon .)
    RETURN          reduce using rule 66 (predefined -> drawpolygon .)
    DRAWCIRCLE      reduce using rule 66 (predefined -> drawpolygon .)
    DRAWSQUARE      reduce using rule 66 (predefined -> drawpolygon .)
    DRAWTRIANGLE    reduce using rule 66 (predefined -> drawpolygon .)
    DRAWLINE        reduce using rule 66 (predefined -> drawpolygon .)
    DRAWPOLYGON     reduce using rule 66 (predefined -> drawpolygon .)
    DRAWCURVE       reduce using rule 66 (predefined -> drawpolygon .)
    RBRACKET        reduce using rule 66 (predefined -> drawpolygon .)


state 46

    (24) statue -> read .

    ID              reduce using rule 24 (statue -> read .)
    IF              reduce using rule 24 (statue -> read .)
    PRINT           reduce using rule 24 (statue -> read .)
    WHILE           reduce using rule 24 (statue -> read .)
    RETURN          reduce using rule 24 (statue -> read .)
    DRAWCIRCLE      reduce using rule 24 (statue -> read .)
    DRAWSQUARE      reduce using rule 24 (statue -> read .)
    DRAWTRIANGLE    reduce using rule 24 (statue -> read .)
    DRAWLINE        reduce using rule 24 (statue -> read .)
    DRAWPOLYGON     reduce using rule 24 (statue -> read .)
    DRAWCURVE       reduce using rule 24 (statue -> read .)
    RBRACKET        reduce using rule 24 (statue -> read .)


state 47

    (22) statue -> assignment .

    ID              reduce using rule 22 (statue -> assignment .)
    IF              reduce using rule 22 (statue -> assignment .)
    PRINT           reduce using rule 22 (statue -> assignment .)
    WHILE           reduce using rule 22 (statue -> assignment .)
    RETURN          reduce using rule 22 (statue -> assignment .)
    DRAWCIRCLE      reduce using rule 22 (statue -> assignment .)
    DRAWSQUARE      reduce using rule 22 (statue -> assignment .)
    DRAWTRIANGLE    reduce using rule 22 (statue -> assignment .)
    DRAWLINE        reduce using rule 22 (statue -> assignment .)
    DRAWPOLYGON     reduce using rule 22 (statue -> assignment .)
    DRAWCURVE       reduce using rule 22 (statue -> assignment .)
    RBRACKET        reduce using rule 22 (statue -> assignment .)


state 48

    (92) drawline -> DRAWLINE . LPAREN ssexpression COMA ssexpression COMA ssexpression COMA ssexpression COMA color RPAREN SEMICOLON

    LPAREN          shift and go to state 80


state 49

    (35) assignment -> ID . ass1 ASSIGN ass2
    (76) read -> ID . ASSIGN INPUT SEMICOLON
    (88) functioncall -> ID . LPAREN fcs1 RPAREN SEMICOLON
    (36) ass1 -> . empty
    (37) ass1 -> . LARRAY ssexpression RARRAY
    (107) empty -> .

  ! shift/reduce conflict for ASSIGN resolved as shift
    ASSIGN          shift and go to state 81
    LPAREN          shift and go to state 83
    LARRAY          shift and go to state 82

  ! ASSIGN          [ reduce using rule 107 (empty -> .) ]

    ass1                           shift and go to state 84
    empty                          shift and go to state 85

state 50

    (23) statue -> condition .
